--- a/consumiIdrici/mainwindow.ui
+++ b/consumiIdrici/mainwindow.ui
@@ -40,7 +40,7 @@
      </rect>
     </property>
     <property name="currentIndex">
-     <number>1</number>
+     <number>0</number>
     </property>
     <widget class="QWidget" name="viewTab">
      <attribute name="title">
@@ -64,8 +64,8 @@
        <rect>
         <x>10</x>
         <y>50</y>
-        <width>511</width>
-        <height>421</height>
+        <width>801</width>
+        <height>451</height>
        </rect>
       </property>
       <property name="title">
@@ -133,13 +133,13 @@
         </rect>
        </property>
       </widget>
-      <widget class="QGraphicsView" name="graphicsView">
+      <widget class="QCustomPlot" name="customPlot" native="true">
        <property name="geometry">
         <rect>
          <x>20</x>
-         <y>90</y>
-         <width>481</width>
-         <height>321</height>
+         <y>80</y>
+         <width>761</width>
+         <height>361</height>
         </rect>
        </property>
       </widget>
@@ -414,6 +414,14 @@
   <widget class="QStatusBar" name="statusBar"/>
  </widget>
  <layoutdefault spacing="6" margin="11"/>
+ <customwidgets>
+  <customwidget>
+   <class>QCustomPlot</class>
+   <extends>QWidget</extends>
+   <header>qcustomplot.h</header>
+   <container>1</container>
+  </customwidget>
+ </customwidgets>
  <resources/>
  <connections/>
 </ui>
