--- a/consumiIdrici/mainwindow.ui
+++ b/consumiIdrici/mainwindow.ui
@@ -427,6 +427,9 @@
       <property name="selectionBehavior">
        <enum>QAbstractItemView::SelectRows</enum>
       </property>
+      <attribute name="verticalHeaderVisible">
+       <bool>false</bool>
+      </attribute>
      </widget>
     </widget>
    </widget>
