--- a/consumiIdrici/mainwindow.ui
+++ b/consumiIdrici/mainwindow.ui
@@ -380,7 +380,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>20</y>
+        <y>60</y>
         <width>141</width>
         <height>16</height>
        </rect>
@@ -393,7 +393,7 @@
       <property name="geometry">
        <rect>
         <x>190</x>
-        <y>20</y>
+        <y>60</y>
         <width>91</width>
         <height>22</height>
        </rect>
@@ -403,7 +403,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>70</y>
+        <y>110</y>
         <width>141</width>
         <height>16</height>
        </rect>
@@ -416,7 +416,7 @@
       <property name="geometry">
        <rect>
         <x>30</x>
-        <y>100</y>
+        <y>140</y>
         <width>361</width>
         <height>231</height>
        </rect>
@@ -430,6 +430,38 @@
       <attribute name="verticalHeaderVisible">
        <bool>false</bool>
       </attribute>
+     </widget>
+     <widget class="QLabel" name="label_14">
+      <property name="geometry">
+       <rect>
+        <x>30</x>
+        <y>20</y>
+        <width>46</width>
+        <height>13</height>
+       </rect>
+      </property>
+      <property name="text">
+       <string>TextLabel</string>
+      </property>
+     </widget>
+     <widget class="QDoubleSpinBox" name="thresholdSpinbox">
+      <property name="geometry">
+       <rect>
+        <x>100</x>
+        <y>20</y>
+        <width>62</width>
+        <height>22</height>
+       </rect>
+      </property>
+      <property name="decimals">
+       <number>3</number>
+      </property>
+      <property name="singleStep">
+       <double>0.050000000000000</double>
+      </property>
+      <property name="value">
+       <double>0.200000000000000</double>
+      </property>
      </widget>
     </widget>
    </widget>
